--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,32 +13,32 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-24 Tue 17:25]
+#+CAPTION: Clock summary at [2017-01-24 Tue 18:19]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *49:59* |       |       | 100.0 |
+| *Total time*                                                                | *50:52* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 49:59   |       |       | 100.0 |
-| Active                                                                      |         | 49:59 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:37 |   5.2 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   1.2 |
+| Stories                                                                     | 50:52   |       |       | 100.0 |
+| Active                                                                      |         | 50:52 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:37 |   5.1 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   1.1 |
 | COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   1.7 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  20.6 |
-| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   2.7 |
-| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   3.0 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  20.2 |
+| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   2.6 |
+| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   2.9 |
 | COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   2.0 |
 | COMPLETED Upsilon test borked due to no output                              |         |       |  0:21 |   0.7 |
-| COMPLETED Add multi-language support                                        |         |       | 13:28 |  26.9 |
-| COMPLETED Add a type mapper                                                 |         |       |  6:19 |  12.6 |
+| COMPLETED Add multi-language support                                        |         |       | 13:28 |  26.5 |
+| COMPLETED Add a type mapper                                                 |         |       |  6:19 |  12.4 |
 | COMPLETED Backslashes in strings cause JSON parsing to fail                 |         |       |  0:49 |   1.6 |
-| COMPLETED Add log-level to command line                                     |         |       |  1:20 |   2.7 |
-| COMPLETED Fix recursive path lookup for upsilon                             |         |       |  1:02 |   2.1 |
+| COMPLETED Add log-level to command line                                     |         |       |  1:20 |   2.6 |
+| COMPLETED Fix recursive path lookup for upsilon                             |         |       |  1:02 |   2.0 |
 | COMPLETED In JSON hydrator rename simple name to simple                     |         |       |  1:03 |   2.1 |
 | COMPLETED Add tailor support for upsilon                                    |         |       |  0:16 |   0.5 |
 | STARTED Add mapping support between upsilon and LAM                         |         |       |  0:43 |   1.4 |
 | STARTED Make the Zeta model compilable                                      |         |       |  0:45 |   1.5 |
-| STARTED Add support for Language Agnostic Models (LAM)                      |         |       |  5:42 |  11.4 |
+| STARTED Add support for Language Agnostic Models (LAM)                      |         |       |  6:35 |  12.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -544,6 +544,7 @@ We need to work through the list of issues with the Zeta model and get
 it to a compilable state.
 
 *** STARTED Add support for Language Agnostic Models (LAM)            :story:
+    CLOCK: [2017-01-24 Tue 17:26]--[2017-01-24 Tue 18:19] =>  0:53
     CLOCK: [2017-01-24 Tue 13:02]--[2017-01-24 Tue 17:25] =>  4:23
     CLOCK: [2017-01-24 Tue 11:11]--[2017-01-24 Tue 11:41] =>  0:30
     CLOCK: [2017-01-24 Tue 10:21]--[2017-01-24 Tue 11:10] =>  0:49
