--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,24 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-24 Tue 18:19]
+#+CAPTION: Clock summary at [2017-01-24 Tue 18:42]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *50:52* |       |       | 100.0 |
+| *Total time*                                                                | *51:12* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 50:52   |       |       | 100.0 |
-| Active                                                                      |         | 50:52 |       | 100.0 |
+| Stories                                                                     | 51:12   |       |       | 100.0 |
+| Active                                                                      |         | 51:12 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:37 |   5.1 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   1.1 |
 | COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   1.7 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  20.2 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  20.1 |
 | COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   2.6 |
 | COMPLETED Bind language to kernel                                           |         |       |  1:29 |   2.9 |
 | COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   2.0 |
 | COMPLETED Upsilon test borked due to no output                              |         |       |  0:21 |   0.7 |
-| COMPLETED Add multi-language support                                        |         |       | 13:28 |  26.5 |
-| COMPLETED Add a type mapper                                                 |         |       |  6:19 |  12.4 |
+| COMPLETED Add multi-language support                                        |         |       | 13:28 |  26.3 |
+| COMPLETED Add a type mapper                                                 |         |       |  6:19 |  12.3 |
 | COMPLETED Backslashes in strings cause JSON parsing to fail                 |         |       |  0:49 |   1.6 |
 | COMPLETED Add log-level to command line                                     |         |       |  1:20 |   2.6 |
 | COMPLETED Fix recursive path lookup for upsilon                             |         |       |  1:02 |   2.0 |
@@ -38,7 +38,7 @@
 | COMPLETED Add tailor support for upsilon                                    |         |       |  0:16 |   0.5 |
 | STARTED Add mapping support between upsilon and LAM                         |         |       |  0:43 |   1.4 |
 | STARTED Make the Zeta model compilable                                      |         |       |  0:45 |   1.5 |
-| STARTED Add support for Language Agnostic Models (LAM)                      |         |       |  6:35 |  12.9 |
+| STARTED Add support for Language Agnostic Models (LAM)                      |         |       |  6:55 |  13.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -510,6 +510,17 @@ generate a pointer. This is not ideal. A better way is to have an
 explicit LAM pointer type. For upsilon we can put in a hack that
 detects if a class is a parent and so forces a pointer to be emitted.
 
+*** COMPLETED Add defaults for cases where mapping is not bijective   :story:
+    CLOSED: [2017-01-24 Tue 18:41]
+
+Upsilon maps a number of LAM types to "collection". This means that
+when we are mapping between LAM and upsilon, we will have
+non-functional relationships. For example: say =lam::dictionary= and
+=lam::list= will both map to =Collection=. So we will need to have a
+"default" mapping for when trying to convert between upsilon and
+LAM. We can extend the mappings class with a "is default" flag and
+update the JSON files.
+
 *** STARTED Add mapping support between upsilon and LAM               :story:
     CLOCK: [2017-01-23 Mon 21:28]--[2017-01-23 Mon 22:11] =>  0:43
 
@@ -544,6 +555,7 @@ We need to work through the list of issues with the Zeta model and get
 it to a compilable state.
 
 *** STARTED Add support for Language Agnostic Models (LAM)            :story:
+    CLOCK: [2017-01-24 Tue 18:20]--[2017-01-24 Tue 18:40] =>  0:20
     CLOCK: [2017-01-24 Tue 17:26]--[2017-01-24 Tue 18:19] =>  0:53
     CLOCK: [2017-01-24 Tue 13:02]--[2017-01-24 Tue 17:25] =>  4:23
     CLOCK: [2017-01-24 Tue 11:11]--[2017-01-24 Tue 11:41] =>  0:30
@@ -653,16 +665,6 @@ and ensure we wrap them around a pointer in C++.
 This is specifically done only for upsilon. We can rely on the
 populated parents collection in order to determine if a type is
 abstract.
-
-*** Add defaults for cases where mapping is not bijective             :story:
-
-Upsilon maps a number of LAM types to "collection". This means that
-when we are mapping between LAM and upsilon, we will have
-non-functional relationships. For example: say =lam::dictionary= and
-=lam::list= will both map to =Collection=. So we will need to have a
-"default" mapping for when trying to convert between upsilon and
-LAM. We can extend the mappings class with a "is default" flag and
-update the JSON files.
 
 *** Map upsilon primitives to intrinsics                              :story:
 
