--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,32 +13,33 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-24 Tue 18:42]
+#+CAPTION: Clock summary at [2017-01-24 Tue 22:56]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *51:12* |       |       | 100.0 |
+| *Total time*                                                                | *52:37* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 51:12   |       |       | 100.0 |
-| Active                                                                      |         | 51:12 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:37 |   5.1 |
+| Stories                                                                     | 52:37   |       |       | 100.0 |
+| Active                                                                      |         | 52:37 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:37 |   5.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   1.1 |
-| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   1.7 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  20.1 |
-| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   2.6 |
-| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   2.9 |
-| COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   2.0 |
+| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   1.6 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  19.6 |
+| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   2.5 |
+| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   2.8 |
+| COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   1.9 |
 | COMPLETED Upsilon test borked due to no output                              |         |       |  0:21 |   0.7 |
-| COMPLETED Add multi-language support                                        |         |       | 13:28 |  26.3 |
-| COMPLETED Add a type mapper                                                 |         |       |  6:19 |  12.3 |
+| COMPLETED Add multi-language support                                        |         |       | 13:28 |  25.6 |
+| COMPLETED Add a type mapper                                                 |         |       |  6:19 |  12.0 |
 | COMPLETED Backslashes in strings cause JSON parsing to fail                 |         |       |  0:49 |   1.6 |
-| COMPLETED Add log-level to command line                                     |         |       |  1:20 |   2.6 |
+| COMPLETED Add log-level to command line                                     |         |       |  1:20 |   2.5 |
 | COMPLETED Fix recursive path lookup for upsilon                             |         |       |  1:02 |   2.0 |
-| COMPLETED In JSON hydrator rename simple name to simple                     |         |       |  1:03 |   2.1 |
+| COMPLETED In JSON hydrator rename simple name to simple                     |         |       |  1:03 |   2.0 |
 | COMPLETED Add tailor support for upsilon                                    |         |       |  0:16 |   0.5 |
 | STARTED Add mapping support between upsilon and LAM                         |         |       |  0:43 |   1.4 |
-| STARTED Make the Zeta model compilable                                      |         |       |  0:45 |   1.5 |
-| STARTED Add support for Language Agnostic Models (LAM)                      |         |       |  6:55 |  13.5 |
+| STARTED Make the Zeta model compilable                                      |         |       |  0:45 |   1.4 |
+| STARTED Add support for Language Agnostic Models (LAM)                      |         |       |  6:55 |  13.1 |
+| STARTED Add support for pointers to mapper in upsilon                       |         |       |  1:25 |   2.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -595,6 +596,7 @@ LAM type map:
 | lam::queue<T>                   | std::queue<T>                    | System.Collections.Generic.Queue<T>               |                      |
 | lam::stack<T>                   | std::stack<T>                    | System.Collections.Generic.Stack<T>               |                      |
 | lam::linked_list<T>             | std::list<T>                     | System.Collections.Generic.LinkedList<T>          |                      |
+| lam::pointer<T>                 | boost::shared_ptr<T>             | <erase>                                           |                      |
 
 *Previous Understanding*
 
@@ -657,7 +659,8 @@ Links:
 - [[http://stackoverflow.com/questions/741054/mapping-between-stl-c-and-c-sharp-containers][Mapping between stl C++ and C# containers]]
 - [[http://stackoverflow.com/questions/3659044/comparison-of-c-stl-collections-and-c-sharp-collections][Comparison of C++ STL collections and C# collections?]]
 
-*** Add support for pointers to mapper in upsilon                     :story:
+*** STARTED Add support for pointers to mapper in upsilon             :story:
+    CLOCK: [2017-01-24 Tue 21:31]--[2017-01-24 Tue 22:56] =>  1:25
 
 We need to detect types which are abstract (if its already populated)
 and ensure we wrap them around a pointer in C++.
