--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,33 +13,33 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-24 Tue 22:56]
+#+CAPTION: Clock summary at [2017-01-25 Wed 10:16]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *52:37* |       |       | 100.0 |
+| *Total time*                                                                | *55:08* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 52:37   |       |       | 100.0 |
-| Active                                                                      |         | 52:37 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:37 |   5.0 |
+| Stories                                                                     | 55:08   |       |       | 100.0 |
+| Active                                                                      |         | 55:08 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:37 |   4.7 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   1.1 |
-| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   1.6 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  19.6 |
-| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   2.5 |
-| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   2.8 |
-| COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   1.9 |
-| COMPLETED Upsilon test borked due to no output                              |         |       |  0:21 |   0.7 |
-| COMPLETED Add multi-language support                                        |         |       | 13:28 |  25.6 |
-| COMPLETED Add a type mapper                                                 |         |       |  6:19 |  12.0 |
-| COMPLETED Backslashes in strings cause JSON parsing to fail                 |         |       |  0:49 |   1.6 |
-| COMPLETED Add log-level to command line                                     |         |       |  1:20 |   2.5 |
-| COMPLETED Fix recursive path lookup for upsilon                             |         |       |  1:02 |   2.0 |
-| COMPLETED In JSON hydrator rename simple name to simple                     |         |       |  1:03 |   2.0 |
+| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   1.5 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  18.7 |
+| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   2.4 |
+| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   2.7 |
+| COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   1.8 |
+| COMPLETED Upsilon test borked due to no output                              |         |       |  0:21 |   0.6 |
+| COMPLETED Add multi-language support                                        |         |       | 13:28 |  24.4 |
+| COMPLETED Add a type mapper                                                 |         |       |  6:19 |  11.5 |
+| COMPLETED Backslashes in strings cause JSON parsing to fail                 |         |       |  0:49 |   1.5 |
+| COMPLETED Add log-level to command line                                     |         |       |  1:20 |   2.4 |
+| COMPLETED Fix recursive path lookup for upsilon                             |         |       |  1:02 |   1.9 |
+| COMPLETED In JSON hydrator rename simple name to simple                     |         |       |  1:03 |   1.9 |
 | COMPLETED Add tailor support for upsilon                                    |         |       |  0:16 |   0.5 |
-| STARTED Add mapping support between upsilon and LAM                         |         |       |  0:43 |   1.4 |
+| STARTED Add mapping support between upsilon and LAM                         |         |       |  0:43 |   1.3 |
 | STARTED Make the Zeta model compilable                                      |         |       |  0:45 |   1.4 |
-| STARTED Add support for Language Agnostic Models (LAM)                      |         |       |  6:55 |  13.1 |
-| STARTED Add support for pointers to mapper in upsilon                       |         |       |  1:25 |   2.7 |
+| STARTED Add support for Language Agnostic Models (LAM)                      |         |       |  6:55 |  12.5 |
+| STARTED Add support for pointers to mapper in upsilon                       |         |       |  3:56 |   7.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -660,6 +660,8 @@ Links:
 - [[http://stackoverflow.com/questions/3659044/comparison-of-c-stl-collections-and-c-sharp-collections][Comparison of C++ STL collections and C# collections?]]
 
 *** STARTED Add support for pointers to mapper in upsilon             :story:
+    CLOCK: [2017-01-25 Wed 09:25]--[2017-01-25 Wed 10:16] =>  0:51
+    CLOCK: [2017-01-25 Wed 08:09]--[2017-01-25 Wed 08:50] =>  0:41
     CLOCK: [2017-01-25 Wed 07:50]--[2017-01-25 Wed 08:08] =>  0:18
     CLOCK: [2017-01-25 Wed 07:12]--[2017-01-25 Wed 07:27] =>  0:15
     CLOCK: [2017-01-25 Wed 06:37]--[2017-01-25 Wed 07:03] =>  0:26
