--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,18 +13,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-25 Wed 17:59]
+#+CAPTION: Clock summary at [2017-01-25 Wed 20:33]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *60:02* |       |       | 100.0 |
+| *Total time*                                                                | *60:13* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 60:02   |       |       | 100.0 |
-| Active                                                                      |         | 60:02 |       | 100.0 |
+| Stories                                                                     | 60:13   |       |       | 100.0 |
+| Active                                                                      |         | 60:13 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:50 |   4.7 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   1.0 |
 | COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   1.4 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  17.2 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  17.1 |
 | COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   2.2 |
 | COMPLETED Bind language to kernel                                           |         |       |  1:29 |   2.5 |
 | COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   1.7 |
@@ -38,7 +38,7 @@
 | COMPLETED Add tailor support for upsilon                                    |         |       |  0:16 |   0.4 |
 | COMPLETED Add support for pointers to mapper in upsilon                     |         |       |  4:44 |   7.9 |
 | COMPLETED Discuss the current approach with end users                       |         |       |  1:31 |   2.5 |
-| STARTED Add mapping support between upsilon and LAM                         |         |       |  1:02 |   1.7 |
+| STARTED Add mapping support between upsilon and LAM                         |         |       |  1:13 |   2.0 |
 | STARTED Make the Zeta model compilable                                      |         |       |  0:45 |   1.2 |
 | STARTED Add support for Language Agnostic Models (LAM)                      |         |       |  6:55 |  11.5 |
 | STARTED Map upsilon primitives to intrinsics                                |         |       |  2:03 |   3.4 |
@@ -553,6 +553,7 @@ abstract.
   named value and of the type of the primitive.
 
 *** STARTED Add mapping support between upsilon and LAM               :story:
+    CLOCK: [2017-01-25 Wed 17:59]--[2017-01-25 Wed 18:10] =>  0:11
     CLOCK: [2017-01-25 Wed 17:39]--[2017-01-25 Wed 17:58] =>  0:19
     CLOCK: [2017-01-23 Mon 21:28]--[2017-01-23 Mon 22:11] =>  0:43
 
